[package]
name = "rimworld-xml"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serde"] }
walkdir = "2.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }
