[package]
name = "rimworld-def-viewer"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serde"] }
walkdir = "2.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }
chrono = "0.4.41"